--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,15 @@
 backend/.venv/
 backend/__pycache__/
 *.pyc
+backend/.env
 
 # JS / React
 frontend/node_modules/
 frontend/dist/
+
+# Secrets OAuth / Gmail
+backend/credentials.json
+backend/token.json
 
 # OS
 .DS_Store
